--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,18 @@
 	<name>Simple Ecomerce Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<distributionManagement>
-   
+    <repository>
+        <id>central</id>
+        <name>ip-172-31-37-111.ap-south-1.compute.internal-releases</name>
+        <url>http://13.235.134.139:8081/artifactory/etoe</url>
+    </repository>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>ip-172-31-37-111.ap-south-1.compute.internal-snapshots</name>
+        <url>http://13.235.134.139:8081/artifactory/etoe</url>
+    </snapshotRepository>
 </distributionManagement>
+	
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
